<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gameText"
        android:layout_width="141dp"
        android:layout_height="37dp"
        android:layout_marginStart="120dp"
        android:text="@string/connect_R"
        android:textColor="@android:color/background_dark"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="359dp"
        android:layout_height="458dp"
        android:background="@drawable/board"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameText"
        app:layout_constraintVertical_bias="1.0"
        app:rowCount="3">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="119dp"
            android:layout_height="121dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/topLeftCornor"
            android:onClick="ImageDrop"
            android:paddingEnd="3dp"
            android:paddingStart="2dp"
            android:tag="0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="119dp"
            android:layout_height="121dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/topMiddleCornor_R"
            android:onClick="ImageDrop"
            android:paddingEnd="3dp"
            android:paddingStart="2dp"
            android:tag="1"
            app:layout_column="1"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="119dp"
            android:layout_height="121dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/middleLeftCornor_R"
            android:onClick="ImageDrop"
            android:paddingEnd="3dp"
            android:paddingStart="2dp"
            android:tag="3"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="119dp"
            android:layout_height="121dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/middleCornor_R"
            android:onClick="ImageDrop"
            android:paddingEnd="3dp"
            android:paddingStart="2dp"
            android:tag="4"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="113dp"
            android:layout_height="121dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/middleRightCornor_R"
            android:onClick="ImageDrop"
            android:paddingEnd="3dp"
            android:paddingStart="2dp"
            android:tag="5" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="119dp"
            android:layout_height="118dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/lowerMiddleCornor_R"
            android:onClick="ImageDrop"
            android:paddingEnd="3dp"
            android:paddingStart="2dp"
            android:tag="7"
            app:layout_column="1"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="113dp"
            android:layout_height="118dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/lowerRightCornor_R"
            android:onClick="ImageDrop"
            android:padding="2dp"
            android:paddingEnd="3dp"
            android:paddingStart="2dp"
            android:tag="8" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="119dp"
            android:layout_height="118dp"
            android:layout_marginEnd="11dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/lowerLeftCornor_R"
            android:onClick="ImageDrop"
            android:paddingEnd="3dp"
            android:paddingStart="2dp"
            android:tag="6"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="113dp"
            android:layout_height="121dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/topRightCornor_R"
            android:onClick="ImageDrop"
            android:paddingEnd="3dp"
            android:paddingStart="2dp"
            android:tag="2"
            app:layout_column="2"
            app:layout_row="0" />

    </android.support.v7.widget.GridLayout>

    <LinearLayout
        android:id="@+id/playAgain_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/winMessage_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="playOnClick"
            android:text="@string/button"
            android:textSize="20sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>